--- a/bick/application/admin/view/article/lst.htm
+++ b/bick/application/admin/view/article/lst.htm
@@ -84,10 +84,7 @@
                                             <a href="{:url('edit',array('id'=>$art['id']))}" class="btn btn-primary btn-sm shiny">
                                                 <i class="fa fa-edit"></i> 编辑
                                             </a>
-																						<button onclick="del({$art['id']});" class="btn btn-xs btn-danger">删除</button>
-                                            <!-- <a href="#" onClick="warning('确实要删除吗', '{:url('del',array('id'=>$art['id']))}')" class="btn btn-danger btn-sm shiny">
-                                                <i class="fa fa-trash-o"></i> 删除
-                                            </a> -->
+						<button onclick="del({$art['id']});" class="btn btn-xs btn-danger">删除</button>																	<button onclick="del({$art['id']});" class="btn btn-xs btn-danger">删除</button>
                                         </td>
                                     </tr>
                                     {/volist}
